Screen wave script added.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -123,3 +123,14 @@ body {
   font-size: 18px;
   text-align: center;
 }
+
+
+#remote-container{
+  font-family: 'Pontano Sans', sans-serif;
+  height: 100%;
+}
+
+#remote-container div{
+  width:100%;
+  height:33%;
+}
