--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,3 +2,7 @@
 
 </div>
 <div id="status"></div>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="/javascript/jquery-1.7.1.min.js"><\/script>')</script>
+<script src="/javascripts/script.js"></script>
