--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,24 +31,14 @@
     
     <!-- Mobile IE allows us to activate ClearType technology for smoothing fonts for easy reading -->
     <meta http-equiv="cleartype" content="on">
-
+    <link href='http://fonts.googleapis.com/css?family=Pontano+Sans' rel='stylesheet' type='text/css'>
     <!-- styles -->
     <script src="/javascripts/helper.js"></script>
     <link href="/stylesheets/style.css" rel="stylesheet">
     <script src="/javascripts/modernizr-2.5.3.min.js"></script>
-    <script src="/javascripts/yepnope.1.5.4-min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
     <%- body %>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="/javascript/jquery-1.7.1.min.js"><\/script>')</script>
-    <script src="/javascripts/script.js"></script>
-
-    <script>
-    var _gaq=[["_setAccount","UA-32821449-1"],["_trackPageview"]];
-    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
-    g.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";
-    s.parentNode.insertBefore(g,s)}(document,"script"));
-  </script>
   </body>
 </html>
