--- a/views/remote.ejs
+++ b/views/remote.ejs
@@ -1,3 +1,5 @@
-<div id="container-session">
-
+<div id="remote-container">
+	<div id="play"><span>Play</span></div>
+	<div id="reset"><span>Reset</span></div>
+	<div id="information"><span>Information</span></div>
 </div>
