--- a/views/remote.ejs
+++ b/views/remote.ejs
@@ -3,3 +3,7 @@
 	<div id="reset"><span>Reset</span></div>
 	<div id="information"><span>Information</span></div>
 </div>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="/javascript/jquery-1.7.1.min.js"><\/script>')</script>
+<script src="/javascripts/remote.js"></script>
